--- a/proizvod/userpage/templates/userpage/add_event.html
+++ b/proizvod/userpage/templates/userpage/add_event.html
@@ -34,8 +34,9 @@
                       <input type="text" name="organizer" placeholder="Организатор" required>
                       <input type="text" name="category" placeholder="Категория" required>
                       <input type="text" name="city" placeholder="Город" required>
-                      <input type="text" name="price" placeholder="Цена" required>
+                      <input type="text" name="price" placeholder="Цена (впишите '0' если бесплатно)" required>
                       <input type="text" name="address" placeholder="Место/адрес" required>
+                      <input type="text" name="people_amount" placeholder="Количество человек">
                       <div class="date-time-container">
                         <input type="date" name="event_date" class="date-input" required>
                         <input type="time" name="time" class="time-input" required>
