--- a/proizvod/userpage/templates/userpage/profile.html
+++ b/proizvod/userpage/templates/userpage/profile.html
@@ -57,6 +57,7 @@
                 <button class="action-button" id="add" onclick="window.location.href='/add/'">Добавить</button>
             {% else %}
               <div class="data">Пользователь</div>
+                <button class="action-button" id="ticketslist" onclick="window.location.href='/mytickets/'">Мои билеты</button>
             {% endif %}
             </div>
         </div>
