--- a/proizvod/eventpage/templates/eventpage/buy.html
+++ b/proizvod/eventpage/templates/eventpage/buy.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    {% if event %}
-    <title>Билет "{{event.name}}"</title>
+    {% if ticket %}
+    <title>Билет "{{ticket.event_name}}"</title>
     <link rel="icon" href="https://static.vecteezy.com/system/resources/thumbnails/046/805/074/small/white-star-blink-free-png.png">
     <link rel="stylesheet" href="{% static 'eventpage/css/ticket.css' %}">
     <script>
@@ -16,7 +16,7 @@
 </script>
 </head>
 <body>
-    <a href="/" class="back-arrow">
+    <a href="{% url 'mytickets' %}" class="back-arrow">
           <img src="/static/eventpage/img/arrow.png" alt="<--">
             </a>
     <div class="ticket">
@@ -31,10 +31,10 @@
                 <img src="/static/eventpage/img/AITU.png" alt="Astana University Logo">
             </div>
             <div class="ticket-info">
-                <p><b>{{ event.name }}</b></p>
-                <p><b>Дата:</b> <br>{{ event.date }}</p>
-                <p><b>Время:</b> <br>{{ event.time }}</p>
-                <p><b>Место:</b> <br>{{ event.place }}</p>
+                <p><b>{{ ticket.event_name }}</b></p>
+                <p><b>Дата:</b> <br>{{ ticket.event_date }}</p>
+                <p><b>Время:</b> <br>{{ ticket.time }}</p>
+                <p><b>Место:</b> <br>{{ ticket.place }}</p>
             </div>
         </div>
 
@@ -43,7 +43,7 @@
                 <img src="/static/eventpage/img/EXAMPLE QR.png" alt="QR Code">
             </div>
             <div class="ticket-details">
-                <p><b>ID билета:</b> <br>{{ event.ticket_id }}</p>
+                <p><b>ID билета:</b> <br>{{ ticket.ticket_id }}</p>
             </div>
         </div>
         {% endif %}
