--- a/proizvod/mainpage/templates/mainpage/main_page.html
+++ b/proizvod/mainpage/templates/mainpage/main_page.html
@@ -83,7 +83,7 @@
                 <img src="/static/mainpage/img/halloween_afisha.PNG" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/static/mainpage/img/vidzhet.jpg" class="d-block w-100" alt="...">
+                <img src="/static/mainpage/img/mero.PNG" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="/static/mainpage/img/chposter.jpg" class="d-block w-100" alt="...">
