--- a/proizvod/userpage/static/userpage/css/profile.css
+++ b/proizvod/userpage/static/userpage/css/profile.css
@@ -12,7 +12,7 @@
 body {
   margin: 0;
   font-family: 'Candara', sans-serif;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   background: linear-gradient(180deg, rgba(47, 52, 105, 0.9), rgba(134, 141, 212, 0.9));
   color: white;
@@ -58,7 +58,7 @@ h2 {
 .profile-section {
   text-align: center;
   position: absolute;
-  bottom: 9%;
+  top: 66%;
   left: 20%;
   display: flex;
   flex-direction: column;
@@ -81,7 +81,7 @@ h2 {
 .info-section {
  position: absolute;
  top: 16%;
- right: 11%;
+ right: 10%;
  margin-left: 10%;
 }
 
@@ -112,7 +112,7 @@ h2 {
   border-radius: 20px;
   background: #868DD4;
   color: white;
-  font-size: 20px;
+  font-size: 24px;
   cursor: pointer;
   opacity: 0;
   pointer-events: none;
@@ -134,7 +134,7 @@ h2 {
 
 #ticketslist {
   opacity: 1;
-  padding: 23px;
+  padding: 20px;
   border: 1.5px solid white;
   margin-left: 10px;
 
