--- a/proizvod/eventpage/static/eventpage/css/ticket.css
+++ b/proizvod/eventpage/static/eventpage/css/ticket.css
@@ -77,28 +77,25 @@ body::before {
 .ticket-info {
     position: absolute;
     left: 48%;
-    top: 21%;
+    top: 24%;
     text-align: left;
 
 }
 p {
- margin: 10% 0;
+ margin: 8% 0;
  font-size: 28px;
  font-family: 'Candara';
 }
 
 .ticket-image {
     position: absolute;
-    top: 0;
-    left: 1%;
+    top: 1px;
+    left: 3px;
 }
 
-.ticket-logo {
-    width: 235px;
-    height: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
+.ticket-image img {
+    max-width: 370px;
+    max-height: 539px;
 }
 
 .ticket-qr-code {
