--- a/proizvod/figuration/static/figuration/css/figure.css
+++ b/proizvod/figuration/static/figuration/css/figure.css
@@ -12,7 +12,7 @@ h1, h2 {
     font-family: 'Hagrid';
   }
   html, body {
-    height: 100%;
+    min-height: 100%;
     margin: 0;
     font-family: 'Candara';
     color: white;
