--- a/proizvod/eventpage/templates/eventpage/buy.html
+++ b/proizvod/eventpage/templates/eventpage/buy.html
@@ -47,7 +47,7 @@
 
         <div class="ticket-left">
             <div class="ticket-qr-code">
-                <img src="/static/eventpage/img/EXAMPLE QR.png" alt="QR Code">
+                <img src="{{ qr_path }}" alt="QR Code">
             </div>
             <div class="ticket-details">
                 <p><b>ID билета:</b> <br>{{ ticket.ticket_id }}</p>
