--- a/proizvod/figuration/templates/figuration/map_page.html
+++ b/proizvod/figuration/templates/figuration/map_page.html
@@ -14,7 +14,9 @@
             </a>
         <div class="search-box">
             <div class="logo">
-              <img src="/static/mainpage/img/logo_main.PNG" alt="TicketSpace Logo">
+              <a href="/">
+                    <img src="/static/mainpage/img/logo_main.PNG" alt="TicketSpace Logo">
+                  </a>
             </div>
             <div class="search-bar">
                 <form method="POST" action="{% url 'search' %}">
@@ -55,7 +57,7 @@
                 </ul>
             </div>
             <div class="map-container">
-                <img src="/static/mainpage/img/mapimapi.png" alt="Карта Казахстана" title="Вы можете кликнуть на нужный вам город">
+                <img src="/static/mainpage/img/mapimapi.png" alt="Карта Казахстана">
             </div>
             <div class="pin Astana">
                 <button onclick="window.location.href='/astana/'">
