--- a/proizvod/figuration/templates/figuration/map_page_almaty.html
+++ b/proizvod/figuration/templates/figuration/map_page_almaty.html
@@ -17,7 +17,9 @@
             </a>
         <div class="search-box">
             <div class="logo">
-              <img src="/static/mainpage/img/logo_main.PNG" alt="TicketSpace Logo">
+              <a href="/">
+                    <img src="/static/mainpage/img/logo_main.PNG" alt="TicketSpace Logo">
+              </a>
             </div>
             <div class="search-bar">
                 <form method="POST" action="{% url 'search' %}">
