--- a/proizvod/figuration/templates/figuration/map_page_astana.html
+++ b/proizvod/figuration/templates/figuration/map_page_astana.html
@@ -17,7 +17,9 @@
             </a>
         <div class="search-box">
             <div class="logo">
-              <img src="/static/mainpage/img/logo_main.PNG" alt="TicketSpace Logo">
+              <a href="/">
+                    <img src="/static/mainpage/img/logo_main.PNG" alt="TicketSpace Logo">
+              </a>
             </div>
             <div class="search-bar">
                 <form method="POST" action="{% url 'search' %}">
@@ -70,7 +72,8 @@
     // Массив координат для маркеров
     var markers = [
         { lat: 51.091122, lon: 71.417416, label: "Astana IT University" },
-        { lat: 51.14636, lon: 71.345489, label: "West Hall" }
+        { lat: 51.14636, lon: 71.345489, label: "West Hall" },
+        { lat: 51.171071, lon: 71.366707, label: "креатив хаб OzgeEpic" },
     ];
 
     // Добавление маркеров на карту
