изменения за вт

--- a/proizvod/eventpage/templates/eventpage/event.html
+++ b/proizvod/eventpage/templates/eventpage/event.html
@@ -110,6 +110,7 @@
                     </div>
                     <div class="details">
                         <p><strong>Цена:</strong> <span id="ticket-price" data-event-id="{{ event.id }}">{{ event.price }}</span></p>
+                        <p><strong>Осталось мест:</strong> {{ event.people_amount }}</p>
                         <p><strong>Дата:</strong> {{ event.date }}</p>
                         <p><strong>Время:</strong> {{ event.time }}</p>
                     </div>
