--- a/proizvod/mainpage/templates/mainpage/main_page.html
+++ b/proizvod/mainpage/templates/mainpage/main_page.html
@@ -80,7 +80,7 @@
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/static/mainpage/img/halloween_afisha.PNG" class="d-block w-100" alt="...">
+                <img src="/static/mainpage/img/halloween_afisha.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="/static/mainpage/img/mero.PNG" class="d-block w-100" alt="...">
