workin with serv problems

--- a/proizvod/figuration/templates/figuration/map_page.html
+++ b/proizvod/figuration/templates/figuration/map_page.html
@@ -57,7 +57,7 @@
                 </ul>
             </div>
             <div class="map-container">
-                <img src="/static/mainpage/img/mapimapi.png" alt="Карта Казахстана">
+                <img src="/static/mainpage/img/mapimapi.PNG" alt="Карта Казахстана">
             </div>
             <div class="pin Astana">
                 <button onclick="window.location.href='/astana/'">
