--- a/proizvod/mainpage/templates/mainpage/main_page.html
+++ b/proizvod/mainpage/templates/mainpage/main_page.html
@@ -174,7 +174,7 @@
             </div>
             <div class="aitu-card-image">
                 <button onclick="window.location.href='/map/'">
-                    <img src="/static/mainpage/img/mapimapi.png" alt="карта">
+                    <img src="/static/mainpage/img/mapimapi.PNG" alt="карта">
                 </button>
               <div class="aitu-placeholder"></div>
             </div>
@@ -212,15 +212,15 @@
             <div class="logo-row">
               <!-- Верхняя строка логотипов -->
               <a href="https://astanahub.com" target="_blank">
-                <img src="/static/mainpage/img/astanahub.png" alt="Astana Hub">
+                <img src="/static/mainpage/img/astanahub.PNG" alt="Astana Hub">
               </a>
               <a href="https://ticketon.kz" target="_blank">
-                <img src="/static/mainpage/img/freedom.png" alt="Freedom Ticketon">
+                <img src="/static/mainpage/img/freedom.PNG" alt="Freedom Ticketon">
               </a>
             </div>
             <!-- Увеличенный логотип -->
             <a href="https://astanait.edu.kz" target="_blank" class="large-logo">
-              <img src="/static/mainpage/img/AITU.png" alt="Astana IT University">
+              <img src="/static/mainpage/img/AITU.PNG" alt="Astana IT University">
             </a>
           </div>
         </div>
