--- a/proizvod/mainpage/templates/mainpage/main_page.html
+++ b/proizvod/mainpage/templates/mainpage/main_page.html
@@ -79,15 +79,11 @@
             </div>
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="/static/mainpage/img/halloween_afisha.png" class="d-block w-100" alt="...">
+              {% for poster in posters %}
+              <div class="carousel-item {% if forloop.first %} active {% endif %}">
+                <img src="{{ poster.0 }}" class="d-block w-100" alt="Banner">
               </div>
-              <div class="carousel-item">
-                <img src="/static/mainpage/img/mero.PNG" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="/static/mainpage/img/chposter.jpg" class="d-block w-100" alt="...">
-              </div>
+            {% endfor %}
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
